--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
+      .text{
+        padding-left: 5px;
+      }
         .card-title{
             border-radius: 10px;
             font-size: 30px;
@@ -139,16 +142,16 @@
     <!-- main   -------------
     --------------------------------- -->
     <section class="bazar">
-      <caption style="text-align: center;"><strong>পণ্যের ক্যাটাগরি সমুহ</strong></caption>
-      <p>রসুলগঞ্জ অনলাইন বাজার এমন একটি অনলাইন বাজার যেখানে গরু ছাগল কাঁচাবাজার সহ মানুষের দৈনিক প্রয়োজনীয় প্রায় সকল সামগ্রীই পাওয়া যায় ।
-        বাংলাদেশে রসুলগঞ্জ অনলাইন বাজার একমাত্র প্রথম প্রতিষ্ঠান যারা সারাদেশেই এলাকাভিত্তিক দামে কাঁচাবাজার সহ বিভিন্ন প্রকার স্থানীয় পণ্য গ্রাহকের কাছে পৌঁছাই দিচ্ছে কোনোপ্রকার ঝামেলা ছাড়াই।
-        <br>
-        এখন মানুষ তুলনামূলকভাবে অনেকটাই ব্যস্ত হয়ে পড়েছে তাই সময়ের সাথে তাল মিলিয়ে সকল কাজ করা সম্ভব হয়ে উঠে না, আর এজন্যই রসুলগঞ্জ অনলাইন বাজার আপনাদের সময়ের মূল্য বুঝে অন্তত বাজারের জন্য যে সময়টুকু ব্যয় হবে সেটি বাঁচিয়ে দিতে পারবে। এছাড়াও অনেক ক্ষেত্রেই স্বাধারণ দোকানে পণ্য ক্রয়ে অর্থনৈতিকভাবে ঠকে যেতে হয় কিন্তু আমাদের এখান থেকে একেবারে ন্যায্য মূল্যে সঠিক পণ্যটি পৌঁছিয়ে দেওয়া হয়। আরো একটি বড় সমস্যা হচ্ছে পণ্যের মান, যা চাহিদা সর্বোচ্চ ভালোটাই প্রদান করারা চেষ্টা করে। বাজারের পাশাপাশি চাহিদা স্থানীয় বাজার কিছু সেবাও চালু করেছে যা গ্রাহকের সকল প্রকার সেবামূলক ঝামেলা থেকে দূরে রাখবে।
-        <br>
-
-        চাহিদা স্থানীয় বাজারের কিছু কার্যক্রম হচ্ছেঃ
-        ১. মুদি দোকান ও কাঁচামাল।                               ২. মেসের বাজার।
-        ৩. চাহিদা সেবা।                                             ৪. ক্রেতা পণ্য ।</p>
+      <div class="text"><caption style="text-align: center;"><strong>পণ্যের ক্যাটাগরি সমুহ</strong></caption>
+        <p>রসুলগঞ্জ অনলাইন বাজার এমন একটি অনলাইন বাজার যেখানে গরু ছাগল কাঁচাবাজার সহ মানুষের দৈনিক প্রয়োজনীয় প্রায় সকল সামগ্রীই পাওয়া যায় ।
+          বাংলাদেশে রসুলগঞ্জ অনলাইন বাজার একমাত্র প্রথম প্রতিষ্ঠান যারা সারাদেশেই এলাকাভিত্তিক দামে কাঁচাবাজার সহ বিভিন্ন প্রকার স্থানীয় পণ্য গ্রাহকের কাছে পৌঁছাই দিচ্ছে কোনোপ্রকার ঝামেলা ছাড়াই।
+          <br>
+          এখন মানুষ তুলনামূলকভাবে অনেকটাই ব্যস্ত হয়ে পড়েছে তাই সময়ের সাথে তাল মিলিয়ে সকল কাজ করা সম্ভব হয়ে উঠে না, আর এজন্যই রসুলগঞ্জ অনলাইন বাজার আপনাদের সময়ের মূল্য বুঝে অন্তত বাজারের জন্য যে সময়টুকু ব্যয় হবে সেটি বাঁচিয়ে দিতে পারবে। এছাড়াও অনেক ক্ষেত্রেই স্বাধারণ দোকানে পণ্য ক্রয়ে অর্থনৈতিকভাবে ঠকে যেতে হয় কিন্তু আমাদের এখান থেকে একেবারে ন্যায্য মূল্যে সঠিক পণ্যটি পৌঁছিয়ে দেওয়া হয়। আরো একটি বড় সমস্যা হচ্ছে পণ্যের মান, যা চাহিদা সর্বোচ্চ ভালোটাই প্রদান করারা চেষ্টা করে। বাজারের পাশাপাশি চাহিদা স্থানীয় বাজার কিছু সেবাও চালু করেছে যা গ্রাহকের সকল প্রকার সেবামূলক ঝামেলা থেকে দূরে রাখবে।
+          <br>
+  
+          চাহিদা স্থানীয় বাজারের কিছু কার্যক্রম হচ্ছেঃ
+          ১. মুদি দোকান ও কাঁচামাল।                               ২. মেসের বাজার।
+          ৩. চাহিদা সেবা।                                             ৪. ক্রেতা পণ্য ।</p></div>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card">
@@ -261,7 +264,8 @@
           </div>
         </div>
       </div>
-<caption>রসুলগঞ্জ অনলাইন বাজার সম্পর্কে কিছু তথ্য আপনাকে দিবে অনলাইন বাজারের শ্রেষ্ঠ অভিজ্ঞতা</caption>
+<div class="text">
+  <caption>রসুলগঞ্জ অনলাইন বাজার সম্পর্কে কিছু তথ্য আপনাকে দিবে অনলাইন বাজারের শ্রেষ্ঠ অভিজ্ঞতা</caption>
 <hr>
       <p> মুদি দোকান ও কাঁচামালঃ
         রসুলগঞ্জ অনলাইন বাজার মুদি দোকান ও কাঁচামাল হচ্ছে একটি বিশাল সুপার শপ, যেখানে দৈনিক প্রয়োজনীয় পণ্য যেমন চাল, ডাল, আটা, ময়দা, শাকসবজি, মসলা, মাছ ,মাংস, তেল, বেকারি ইত্যাদি প্রায় সকল পণ্যই এখান থেকে কেনা যাবে শুধুমাত্র কয়েকটি ক্লিকেই । আপনি বাসায় বসে শুয়ে কিংবা অফিস রাস্তায় যেখানেই থাকুন না কেন অনলাইনে চাহিদা স্থানীয় বাজারের অ্যাপস্‌, ওয়েবসাইট অথবা সরাসরি ফোন করে অর্ডার করুন, মাত্র ২ ঘন্টার মধ্যেই পণ্য পৌঁছে যাবে আপনার বাসায়। আর পেমেন্ট, পণ্য দেখে ক্যাশ অন ডেলিভারিতে অথবা যে কোন মোবাইল ব্যাংকিং এর মাধ্যমে মোবাইলেই পে করতে পারবেন । এছাড়া আমাদের গ্রাহকদের সুবিধার কথা মাথায় রেখে কিছু মেম্বারশিপেরও ব্যবস্থা রয়েছে । যেমন ফ্রী মেম্বারশিপ, স্থায়ী মেম্বারশিপ ও সুপার মেম্বারশিপ । প্রতিটি মেম্বারশিপেরই রয়েছে আলাদা আলাদা রকমের সুবিধা। এ সম্পর্কে বিস্তারিত জানতে ভিজিট করুন আমাদের ব্লগে ।
@@ -277,6 +281,7 @@
 >> পণ্য নিয়ে যুক্তিসঙ্গত কারণে অখুশি থাকলে পচনশীল পণ্য নেওয়ার সময় দেখে সাথে সাথে এবং অপচনীয় পণ্য ৩ দিনের মধ্যে ফেরত দিতে পারবেন সম্পূর্ণ বিনামূল্যেই।
 <br>
 >> অর্ডার পূর্ববর্তি কিংবা পরবর্তি যে কোন প্রকার সমস্যার সমাধানে সার্বক্ষণিক আমাদের হেল্পলাইন চালু আছে।</p>
+</div>
     </section>
     <hr class="hr">
     <hr class="hr">
