--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="container-fluid ">
            
             
-            <a  class="navbar-brand" href="#"><i class="fas fa-store-alt"></i>রসুলগঞ্জ অনলাইন বাজার
+            <a  class="navbar-brand" href="#"><i class="fas fa-store-alt"></i>রসুলগঞ্জ অনলাইন বাজার // Call +8801711111111
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -122,7 +122,7 @@
         <div id="carouselExampleControls" class="carousel slide  " data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="image/new slider/Chahida-web-banner-5.jpg" class="d-block w-100" alt="...">
+              <img src="image/new slider/Chahida-web-banner-2 (1).jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <img src="image/images (1).jpg" class="d-block w-100" alt="...">
@@ -134,7 +134,7 @@
               <img src="image/images (3).jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="image/new slider/Chahida-web-banner-2 (1).jpg" class="d-block w-100" alt="...">
+              <img src="image/new slider/Chahida-web-banner-5.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <img src="image/images (5).jpg" class="d-block w-100" alt="...">
@@ -298,7 +298,7 @@
   <caption>রসুলগঞ্জ অনলাইন বাজার সম্পর্কে কিছু তথ্য আপনাকে দিবে অনলাইন বাজারের শ্রেষ্ঠ অভিজ্ঞতা</caption>
 <hr>
       <p> মুদি দোকান ও কাঁচামালঃ
-        রসুলগঞ্জ অনলাইন বাজার মুদি দোকান ও কাঁচামাল হচ্ছে একটি বিশাল সুপার শপ, যেখানে দৈনিক প্রয়োজনীয় পণ্য যেমন চাল, ডাল, আটা, ময়দা, শাকসবজি, মসলা, মাছ ,মাংস, তেল, বেকারি ইত্যাদি প্রায় সকল পণ্যই এখান থেকে কেনা যাবে শুধুমাত্র কয়েকটি ক্লিকেই । আপনি বাসায় বসে শুয়ে কিংবা অফিস রাস্তায় যেখানেই থাকুন না কেন অনলাইনে চাহিদা স্থানীয় বাজারের অ্যাপস্‌, ওয়েবসাইট অথবা সরাসরি ফোন করে অর্ডার করুন, মাত্র ২ ঘন্টার মধ্যেই পণ্য পৌঁছে যাবে আপনার বাসায়। আর পেমেন্ট, পণ্য দেখে ক্যাশ অন ডেলিভারিতে অথবা যে কোন মোবাইল ব্যাংকিং এর মাধ্যমে মোবাইলেই পে করতে পারবেন । এছাড়া আমাদের গ্রাহকদের সুবিধার কথা মাথায় রেখে কিছু মেম্বারশিপেরও ব্যবস্থা রয়েছে । যেমন ফ্রী মেম্বারশিপ, স্থায়ী মেম্বারশিপ ও সুপার মেম্বারশিপ । প্রতিটি মেম্বারশিপেরই রয়েছে আলাদা আলাদা রকমের সুবিধা। এ সম্পর্কে বিস্তারিত জানতে ভিজিট করুন আমাদের ব্লগে ।
+        রসুলগঞ্জ অনলাইন বাজার মুদি দোকান ও কাঁচামাল হচ্ছে একটি বিশাল সুপার শপ, যেখানে দৈনিক প্রয়োজনীয় পণ্য যেমন চাল, ডাল, আটা, ময়দা, শাকসবজি, মসলা, মাছ ,মাংস, তেল, বেকারি ইত্যাদি প্রায় সকল পণ্যই এখান থেকে কেনা যাবে শুধুমাত্র কয়েকটি ক্লিকেই । আপনি বাসায় বসে শুয়ে কিংবা অফিস রাস্তায় যেখানেই থাকুন না কেন অনলাইনে রসুলগঞ্জ অনলাইন বাজার অ্যাপস্‌, ওয়েবসাইট অথবা সরাসরি ফোন করে অর্ডার করুন, মাত্র ২ ঘন্টার মধ্যেই পণ্য পৌঁছে যাবে আপনার বাসায়। আর পেমেন্ট, পণ্য দেখে ক্যাশ অন ডেলিভারিতে অথবা যে কোন মোবাইল ব্যাংকিং এর মাধ্যমে মোবাইলেই পে করতে পারবেন । এছাড়া আমাদের গ্রাহকদের সুবিধার কথা মাথায় রেখে কিছু মেম্বারশিপেরও ব্যবস্থা রয়েছে । যেমন ফ্রী মেম্বারশিপ, স্থায়ী মেম্বারশিপ ও সুপার মেম্বারশিপ । প্রতিটি মেম্বারশিপেরই রয়েছে আলাদা আলাদা রকমের সুবিধা। এ সম্পর্কে বিস্তারিত জানতে ভিজিট করুন আমাদের ব্লগে ।
         <br>
 উল্লেখযোগ্য কিছু দিক, যা না বললেই নয়ঃ
 <br>
