--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         .card-title{
             border-radius: 10px;
             font-size: 30px;
-            background-color:red;
+            background-color:wheat;
         }
         .buy:hover {
           background-color: skyblue;
@@ -75,6 +75,10 @@
 .cear-titel-1{
   color: black;
   padding-right: 3px;
+}
+.gc{
+  padding-right: 6px;
+  padding-left: 7px;
 }
 
        
@@ -321,7 +325,7 @@
    -->
     <main class="product-item bg-info my-5">
       <hr class="hr">
-      <h2>গরুর বাজার</h2>
+      <h2 class="gc">গরুর বাজার</h2>
         <div class="row row-cols-1 row-cols-md-2  g-4">
             <div class="col">
               <div class="card">
@@ -390,7 +394,7 @@
 <!-- goat section 
 --------------------------------------- -->
  <hr class="hr">
- <h2>ছাগল বাজার</h2>
+ <h2 class="gc">ছাগল বাজার</h2>
   <hr class="hr">
 
 
