--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
           <div class="container-fluid ">
            
             
-            <a  class="navbar-brand" href="#"><i class="fas fa-store-alt"></i>রসুলগঞ্জ অনলাইন বাজার // Call +8801711111111
+            <a  class="navbar-brand" href="#"><i class="fas fa-store-alt"></i>রসুলগঞ্জ অনলাইন বাজার 
+            <br>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -180,7 +181,7 @@
           এখন মানুষ তুলনামূলকভাবে অনেকটাই ব্যস্ত হয়ে পড়েছে তাই সময়ের সাথে তাল মিলিয়ে সকল কাজ করা সম্ভব হয়ে উঠে না, আর এজন্যই রসুলগঞ্জ অনলাইন বাজার আপনাদের সময়ের মূল্য বুঝে অন্তত বাজারের জন্য যে সময়টুকু ব্যয় হবে সেটি বাঁচিয়ে দিতে পারবে। এছাড়াও অনেক ক্ষেত্রেই স্বাধারণ দোকানে পণ্য ক্রয়ে অর্থনৈতিকভাবে ঠকে যেতে হয় কিন্তু আমাদের এখান থেকে একেবারে ন্যায্য মূল্যে সঠিক পণ্যটি পৌঁছিয়ে দেওয়া হয়। আরো একটি বড় সমস্যা হচ্ছে পণ্যের মান, যা চাহিদা সর্বোচ্চ ভালোটাই প্রদান করারা চেষ্টা করে। বাজারের পাশাপাশি চাহিদা স্থানীয় বাজার কিছু সেবাও চালু করেছে যা গ্রাহকের সকল প্রকার সেবামূলক ঝামেলা থেকে দূরে রাখবে।
           <br>
   
-          চাহিদা স্থানীয় বাজারের কিছু কার্যক্রম হচ্ছেঃ
+          রসুলগঞ্জ অনলাইন বাজারের কিছু কার্যক্রম হচ্ছেঃ
           ১. মুদি দোকান ও কাঁচামাল।                               ২. মেসের বাজার।
           ৩. চাহিদা সেবা।                                             ৪. ক্রেতা পণ্য ।</p></div>
 
@@ -501,7 +502,7 @@
         <div class="d-flex justify-content-center bg-dark text-white">
           <p>privacy policy tram & condition contact-info <br>
              address:-Rasulgang Bazar <br>
-             Copyright ⓒ 1995-2021 SAMSUNG All Rights reserved.
+             Copyright ⓒ 1995-2021 রসুলগঞ্জ অনলাইন বাজার All Rights reserved.
             </p>
         </div>
        </footer>
